crates/function-metrics/tests/ui/fail/invalid_name.rs
use function_metrics::function_metrics;

#[function_metrics(name = "Not_Snake_Case")]
fn invalid() {}

fn main() {}
